--- a/hoj-vue-pc/package.json
+++ b/hoj-vue-pc/package.json
@@ -7,17 +7,26 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "element-ui": "^2.14.0",
+    "font-awesome": "^4.7.0",
+    "moment": "^2.29.1",
     "vue": "^2.6.11",
+    "vue-cropper": "^0.5.5",
+    "vue-m-message": "^3.0.0",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vue-template-compiler": "^2.6.12",
+    "vuex": "^3.4.0",
+    "vuex-router-sync": "^5.0.0",
+    "vxe-table": "^2.9.26",
+    "xe-utils": "^2.8.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "vue-template-compiler": "^2.6.11"
+    "@vue/cli-service": "~4.5.0"
   },
   "browserslist": [
     "> 1%",
