--- a/hoj-vue-pc/package.json
+++ b/hoj-vue-pc/package.json
@@ -9,11 +9,19 @@
   "dependencies": {
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "default-passive-events": "^2.0.0",
+    "echarts": "^4.9.0",
     "element-ui": "^2.14.0",
     "font-awesome": "^4.7.0",
+    "highlight.js": "^10.3.2",
+    "katex": "^0.12.0",
     "moment": "^2.29.1",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
+    "vue-clipboard2": "^0.3.1",
+    "vue-codemirror-lite": "^1.0.4",
     "vue-cropper": "^0.5.5",
+    "vue-echarts": "^5.0.0-beta.0",
     "vue-m-message": "^3.0.0",
     "vue-router": "^3.2.0",
     "vue-template-compiler": "^2.6.12",
@@ -23,6 +31,7 @@
     "xe-utils": "^2.8.1"
   },
   "devDependencies": {
+    "@types/highlight.js": "^10.1.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
