--- a/hoj-vue/package.json
+++ b/hoj-vue/package.json
@@ -8,22 +8,28 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "browser-detect": "^0.2.28",
     "core-js": "^3.6.5",
     "default-passive-events": "^2.0.0",
     "echarts": "^4.9.0",
     "element-ui": "^2.14.0",
     "font-awesome": "^4.7.0",
     "highlight.js": "^10.3.2",
+    "jquery": "^3.5.1",
     "katex": "^0.12.0",
     "moment": "^2.29.1",
     "muse-ui": "^3.0.2",
     "nprogress": "^0.2.0",
+    "papaparse": "^5.3.0",
+    "tar-simditor-markdown": "^1.2.3",
+    "tar-simditor": "^3.0.5",
     "vue": "^2.6.11",
     "vue-clipboard2": "^0.3.1",
     "vue-codemirror-lite": "^1.0.4",
     "vue-cropper": "^0.5.5",
     "vue-echarts": "^5.0.0-beta.0",
     "vue-m-message": "^3.0.0",
+    "vue-particles": "^1.0.9",
     "vue-router": "^3.2.0",
     "vue-template-compiler": "^2.6.12",
     "vuex": "^3.4.0",
