--- a/hoj-vue/package.json
+++ b/hoj-vue/package.json
@@ -21,9 +21,10 @@
     "muse-ui": "^3.0.2",
     "nprogress": "^0.2.0",
     "papaparse": "^5.3.0",
-    "tar-simditor-markdown": "^1.2.3",
     "tar-simditor": "^3.0.5",
+    "tar-simditor-markdown": "^1.2.3",
     "vue": "^2.6.11",
+    "vue-avatar": "^2.3.3",
     "vue-clipboard2": "^0.3.1",
     "vue-codemirror-lite": "^1.0.4",
     "vue-cropper": "^0.5.5",
