--- a/hoj-springboot/JudgeServer/pom.xml
+++ b/hoj-springboot/JudgeServer/pom.xml
@@ -9,15 +9,33 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>JudgeServer</artifactId>
+    <packaging>jar</packaging>
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <!-- 指定该Main Class为全局的唯一入口 -->
+                    <mainClass>top.hcode.hoj.JudgeServerApplication</mainClass>
+                    <layout>ZIP</layout>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal><!--可以把依赖的包都打包到生成的Jar包中-->
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <source>8</source>
                     <target>8</target>
+                    <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
         </plugins>
@@ -68,6 +86,7 @@
             <artifactId>hutool-all</artifactId>
             <version>5.3.3</version>
         </dependency>
+
     </dependencies>
 
 </project>
