--- a/hoj-springboot/JudgeServer/pom.xml
+++ b/hoj-springboot/JudgeServer/pom.xml
@@ -97,6 +97,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.13.1</version>
+        </dependency>
     </dependencies>
 
 </project>
