--- a/hoj-vue/package.json
+++ b/hoj-vue/package.json
@@ -17,12 +17,11 @@
     "highlight.js": "^10.3.2",
     "jquery": "^3.5.1",
     "katex": "^0.12.0",
+    "mavon-editor": "^2.9.1",
     "moment": "^2.29.1",
     "muse-ui": "^3.0.2",
     "nprogress": "^0.2.0",
     "papaparse": "^5.3.0",
-    "tar-simditor": "^3.0.5",
-    "tar-simditor-markdown": "^1.2.3",
     "vue": "^2.6.11",
     "vue-avatar": "^2.3.3",
     "vue-clipboard2": "^0.3.1",
