--- a/docs/package.json
+++ b/docs/package.json
@@ -1,13 +1,13 @@
 {
   "name": "docs",
   "version": "1.0.0",
-  "description": "",
+  "description": "HOJ文档",
   "main": "index.js",
   "scripts": {
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
   },
-  "keywords": [],
+  "keywords": ["HOJ"],
   "author": "Himit_ZH",
   "license": "ISC"
 }
