--- a/hoj-springboot/JudgeServer/src/main/resources/application.yml
+++ b/hoj-springboot/JudgeServer/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   profiles: prod
   datasource:
-    username: ${hoj.judge.db.username}
-    password: ${hoj.judge.db.password}
-    url: jdbc:mysql://${hoj.judge.db.host}:${hoj.judge.db.port}/${hoj.judge.db.name}?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&allowMultiQueries=true&rewriteBatchedStatements=true
+    username: ${hoj.db.username}
+    password: ${hoj.db.password}
+    url: jdbc:mysql://${hoj.db.public-host}:${hoj.db.port}/${hoj.db.name}?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&allowMultiQueries=true&rewriteBatchedStatements=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
     initial-size: 5 # 初始化时建立物理连接的个数。初始化发生在显示调用init方法，或者第一次getConnection时
@@ -28,20 +28,6 @@ spring:
     filters: stat,wall,log4j #数据库日志
     connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
 
-  redis:
-    host: ${hoj.redis.host}
-    port: ${hoj.redis.port}
-    timeout: 60000
-    jedis:
-      pool:
-        min-idle: 5 #连接池中的最小空闲连接
-        max-idle: 10 #连接池中的最大空闲连接
-        max-active: 20 #连接池最大连接数（使用负值表示没有限制）
-        max-wait: -1 #连接池最大阻塞等待时间（使用负值表示没有限制）
-    password: ${hoj.redis.password}
-
-
-
 mybatis-plus:
   mapper-locations: classpath*:top/hcode/hoj/dao/xml/**Mapper.xml
   type-aliases-package: top.hcode.hoj.pojo.entity
@@ -53,6 +39,8 @@ logging:
       alibaba:
         nacos: error
     root: error
+  config: classpath:logback-spring.xml
+  path: /hoj/log/backend/hoj_judgeserver.log
 # 暴露监控
 management:
   endpoints:
