--- a/hoj-springboot/DataBackup/src/main/resources/application.yml
+++ b/hoj-springboot/DataBackup/src/main/resources/application.yml
@@ -5,16 +5,16 @@ spring:
 ---
 # 消费者将要去访问的微服务名称（注册成功进入nacos的微服务提供者）
 service-url:
-  hoj-judge-server: http://hoj-judge-server # 服务访问base_url
-  name: hoj-judge-server # 服务名
+  hoj-judge-server: http://hoj-judgeserver # 服务访问base_url
+  name: hoj-judgeserver # 服务名
 
 spring:
   profiles: prod
   # 配置文件上传限制
   servlet:
     multipart:
-      max-file-size: 50MB
-      max-request-size: 50MB
+      max-file-size: 128MB
+      max-request-size: 128MB
   mail:
     properties.mail.smtp.ssl.enable: ${hoj.mail.ssl}
     properties.mail.smtp.starttls.enable: true
@@ -24,24 +24,24 @@ spring:
     host: ${hoj.mail.host}
     port: ${hoj.mail.port}
   redis:
-    host: ${hoj.redis.host}
-    port: ${hoj.redis.port}
+    host: ${hoj.redis.host:${hoj-backstage.config.redis.host}}
+    port: ${hoj.redis.port:${hoj-backstage.config.redis.port}}
     timeout: 60000
     jedis:
       pool:
-        min-idle: 50 #连接池中的最小空闲连接
+        min-idle: 10 #连接池中的最小空闲连接
         max-idle: 200 #连接池中的最大空闲连接
-        max-active: 500 #连接池最大连接数（使用负值表示没有限制）
+        max-active: 400 #连接池最大连接数（使用负值表示没有限制）
         max-wait: -1 #连接池最大阻塞等待时间（使用负值表示没有限制）
-    password: ${hoj.redis.password}
+    password: ${hoj.redis.password:${hoj-backstage.config.redis.password}}
   datasource:
-    username: ${hoj.db.username}
-    password: ${hoj.db.password}
-    url: jdbc:mysql://${hoj.db.host}:${hoj.db.port}/${hoj.db.name}?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&allowMultiQueries=true&rewriteBatchedStatements=true
+    username: ${hoj.db.username:${hoj-backstage.config.db.username}}
+    password: ${hoj.db.password:${hoj-backstage.config.db.password}}
+    url: jdbc:mysql://${hoj.db.host:${hoj-backstage.config.db.host}}:${hoj.db.port:${hoj-backstage.config.db.port}}/${hoj.db.name:${hoj-backstage.config.db.name}}?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&allowMultiQueries=true&rewriteBatchedStatements=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
-    initial-size: 20 # 初始化时建立物理连接的个数。初始化发生在显示调用init方法，或者第一次getConnection时
-    min-idle: 50 # 最小连接池数量
+    initial-size: 10 # 初始化时建立物理连接的个数。初始化发生在显示调用init方法，或者第一次getConnection时
+    min-idle: 20 # 最小连接池数量
     maxActive: 400 # 最大连接池数量
     maxWait: 60000 # 获取连接时最大等待时间，单位毫秒。配置了maxWait之后，缺省启用公平锁，并发效率会有所下降，如果需要可以通过配置
     timeBetweenEvictionRunsMillis: 60000 # 关闭空闲连接的检测时间间隔.Destroy线程会检测连接的间隔时间，如果连接空闲时间大于等于minEvictableIdleTimeMillis则关闭物理连接。
@@ -72,8 +72,8 @@ mybatis-plus:
 shiro-redis:
   enabled: true
   redis-manager:
-    host: ${hoj.redis.host}:${hoj.redis.port}
-    password: ${hoj.redis.password}
+    host: ${hoj.redis.host:${hoj-backstage.config.redis.host}}:${hoj.redis.port:${hoj-backstage.config.redis.port}}
+    password: ${hoj.redis.password:${hoj-backstage.config.redis.password}}
 
 ribbon:
   # 指的是建立连接所用的时间，适用于网络状况正常的情况下，俩端连接所用的时间 单位是秒
@@ -89,11 +89,6 @@ logging:
           client:
             naming: error
     root: error
+  config: classpath:logback-spring.xml
+  path: /hoj/log/backend/hoj_backend.log
 
-hystrix:
-  command:
-    default:
-      execution:
-        isolation:
-          thread:
-            timeoutInMilliseconds: 60000
