--- a/hoj-springboot/DataBackup/src/main/resources/bootstrap.yml
+++ b/hoj-springboot/DataBackup/src/main/resources/bootstrap.yml
@@ -1,6 +1,46 @@
 hoj-backstage:
-  port: 6688 # 本服务器启动的端口号
-  nacos-url: 172.18.0.3:8848 # nacos的地址
+  port: ${BACKEND_SERVER_PORT:6688} # 本服务器启动的端口号
+  nacos-url: ${NACOS_URL:172.20.0.4:8848} # nacos的地址
+  open-remote-judge: ${OPEN_REMOTE_JUDGE:false} # 是否开启vj
+  config:
+    jwt:
+      # 加密秘钥 默认则生成32位随机密钥
+      secret: ${JWT_TOKEN_SECRET:default}
+      # token默认为24小时 86400s
+      expire: ${JWT_TOKEN_EXPIRE:86400}
+      # token默认12小时可自动刷新
+      checkRefreshExpire: ${JWT_TOKEN_FRESH_EXPIRE:43200}
+      header: token
+    judge:
+        # 调用判题服务器的token 默认则生成32位随机密钥
+      token: ${JUDGE_TOKEN:default}
+    db: # mysql数据库服务配置
+      host: ${MYSQL_HOST:172.20.0.3}
+      public-host: ${MYSQL_PUBLIC_HOST:172.20.0.3}
+      port: ${MYSQL_PORT:3306}
+      name: ${MYSQL_DATABASE_NAME:hoj} # 默认hoj
+      username: ${MYSQL_USERNAME:root}
+      password: ${MYSQL_ROOT_PASSWORD:hoj123456}
+    mail: # 邮箱服务配置
+      ssl: true
+      username: ${EMAIL_USERNMAE:your_email_username}
+      password: ${EMAIL_PASSWORD:your_email_password}
+      host: ${EMAIL_SERVER_HOST:your_email_host}
+      port: ${EMAIL_SERVER_PORT:465}
+      background-img: https://cdn.jsdelivr.net/gh/HimitZH/CDN/images/HCODE.png # 邮箱系统发送邮件模板的背景图片地址
+    redis: # redis服务配置
+      host: ${REDIS_HOST:172.20.0.2}
+      port: ${REDIS_PORT:6379}
+      password: ${REDIS_PASSWORD:hoj123456}
+    hdu:
+      account:
+        username: ${HDU_ACCOUNT_USERNAME_LIST:}
+        password: ${HDU_ACCOUNT_PASSWORD_LIST:}
+    cf:
+      account:
+        username: ${CF_ACCOUNT_USERNAME_LIST:}
+        password: ${CF_ACCOUNT_USERNAME_LIST:}
+
 
 server:
   port: ${hoj-backstage.port}
@@ -12,16 +52,21 @@ spring:
   cloud:
     nacos:
       discovery:
+        username: ${NACOS_USERNAME:nacos}
+        password: ${NACOS_PASSWORD:nacos}
         server-addr: ${hoj-backstage.nacos-url} # Nacos 作为服务注册中心 nacos的地址
       config:
+        username: ${NACOS_USERNAME:nacos}
+        password: ${NACOS_PASSWORD:nacos}
         server-addr: ${hoj-backstage.nacos-url}  #Nacos 作为配置中心地址 nacos的地址
         file-extension: yml #指定yaml格式的配置
         group: DEFAULT_GROUP  # 指定分组
-        data-id: hoj-data-backup-prod.yml
         type: yaml
         #namespace:命名空间ID  默认为public
+        prefix: hoj
       url: http://${hoj-backstage.nacos-url}
 
 
 # ${spring.application.name}-${spring.profile.active}.${spring.cloud.naces.config.file-extension}
-# hoj-data-backup-prod.yml
+# ${spring.cloud.nacos.config.prefix}-${spring.profile.active}.${spring.cloud.naces.config.file-extension}
+# hoj-prod.yml
