修正题目讨论归类错误

--- a/hoj-springboot/.gitignore
+++ b/hoj-springboot/.gitignore
@@ -1,7 +1,14 @@
+*.classpath
+
+# Package Files 
+*.jar
+*.war
+*.ear
+
 .DS_Store
 node_modules
-/dist
-/target/
+dist/
+target/
 .classpath
 .project
 
