添加编辑器文件上传 修改题目数据、排行榜统计方式

--- a/hoj-springboot/DataBackup/src/main/resources/bootstrap.yml
+++ b/hoj-springboot/DataBackup/src/main/resources/bootstrap.yml
@@ -3,6 +3,9 @@ hoj-backstage:
   nacos-url: ${NACOS_URL:172.20.0.4:8848} # nacos的地址
 server:
   port: ${hoj-backstage.port}
+  servlet:
+    encoding:
+      force: true
 spring:
   profiles:
     active: prod
