修复tag大小写重复导致导入题目识别，增加tag根据oj归类

--- a/hoj-springboot/DataBackup/src/main/resources/bootstrap.yml
+++ b/hoj-springboot/DataBackup/src/main/resources/bootstrap.yml
@@ -32,3 +32,8 @@ spring:
 # ${spring.application.name}-${spring.profile.active}.${spring.cloud.naces.config.file-extension}
 # ${spring.cloud.nacos.config.prefix}-${spring.profile.active}.${spring.cloud.naces.config.file-extension}
 # hoj-prod.yml
+
+# 消费者将要去访问的微服务名称（注册成功进入nacos的微服务提供者）
+service-url:
+  hoj-judge-server: http://hoj-judgeserver # 服务访问base_url
+  name: hoj-judgeserver # 服务名
