--- a/hoj-springboot/DataBackup/pom.xml
+++ b/hoj-springboot/DataBackup/pom.xml
@@ -126,6 +126,12 @@
             <version>5.3.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.vdurmont</groupId>
+            <artifactId>emoji-java</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+
         <!--redis整合-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
