增加spj对使用testlib的支持

--- a/hoj-springboot/DataBackup/src/main/resources/application-prod.yml
+++ b/hoj-springboot/DataBackup/src/main/resources/application-prod.yml
@@ -73,4 +73,5 @@ logging:
             naming: error
     root: error
   config: classpath:logback-spring.xml
-  path: /hoj/log/backend/hoj_backend.log
+  file:
+    path: /hoj/log/backend/hoj_backend.log
