update fe and log config

--- a/hoj-springboot/DataBackup/src/main/resources/application-prod.yml
+++ b/hoj-springboot/DataBackup/src/main/resources/application-prod.yml
@@ -74,4 +74,4 @@ logging:
     root: error
   config: classpath:logback-spring.xml
   file:
-    path: /hoj/log/backend/hoj_backend.log
+    path: /hoj/log/backend
