--- a/hoj-springboot/DataBackup/src/main/resources/application.yml
+++ b/hoj-springboot/DataBackup/src/main/resources/application.yml
@@ -84,5 +84,5 @@ logging:
     root: error
   config: classpath:logback-spring.xml
   file:
-    path: /hoj/log/backend/hoj_backend.log
+    path: /hoj/log/backend
 
