增加比赛提交重判 优化判题机

--- a/hoj-springboot/JudgeServer/src/main/resources/application.yml
+++ b/hoj-springboot/JudgeServer/src/main/resources/application.yml
@@ -42,7 +42,7 @@ logging:
     root: error
   config: classpath:logback-spring.xml
   file:
-    path: /hoj/log/judgeserver
+    path: /judge/log/judgeserver
 # 暴露监控
 management:
   endpoints:
