--- a/hoj-springboot/DataBackup/src/main/resources/application-prod.yml
+++ b/hoj-springboot/DataBackup/src/main/resources/application-prod.yml
@@ -71,6 +71,7 @@ logging:
         nacos:
           client:
             naming: error
+      gargoylesoftware: off
     root: error
   config: classpath:logback-spring.xml
   file:
