--- a/hoj-springboot/DataBackup/src/main/resources/application.yml
+++ b/hoj-springboot/DataBackup/src/main/resources/application.yml
@@ -81,6 +81,7 @@ logging:
         nacos:
           client:
             naming: error
+      gargoylesoftware: off
     root: error
   config: classpath:logback-spring.xml
   file:
