修正judgeserver的一些参数

--- a/hoj-springboot/JudgeServer/src/main/resources/bootstrap.yml
+++ b/hoj-springboot/JudgeServer/src/main/resources/bootstrap.yml
@@ -1,12 +1,12 @@
 hoj-judge-server:
-  max-task-num: ${MAX_TASK_NUM:-1} # -1表示最大并行任务数为cpu核心数*2
+  max-task-num: ${MAX_TASK_NUM:-1} # -1表示最大并行任务数为cpu核心数+1
   ip: ${JUDGE_SERVER_IP:127.0.0.1} # -1表示使用默认本地ipv4，若是部署其它服务器，务必使用公网ip
   port: ${JUDGE_SERVER_PORT:8088}  # 端口号
   name: ${JUDGE_SERVER_NAME:hoj-judger-1} # 判题机名字 唯一不可重复！！！
   nacos-url: ${NACOS_URL:127.0.0.1:8848}  # nacos地址
   remote-judge:
     open: ${REMOTE_JUDGE_OPEN:true} # 当前判题服务器是否开启远程虚拟判题功能
-    max-task-num: ${REMOTE_JUDGE_MAX_TASK_NUM:-1}  # -1表示最大并行任务数为(cpu核心数*2)*2
+    max-task-num: ${REMOTE_JUDGE_MAX_TASK_NUM:-1}  # -1表示最大并行任务数为cpu核心数*2+1
 server:
   port: ${hoj-judge-server.port}
 spring:
