--- a/hoj-springboot/JudgeServer/src/main/resources/application.yml
+++ b/hoj-springboot/JudgeServer/src/main/resources/application.yml
@@ -39,7 +39,7 @@ logging:
       alibaba:
         nacos: error
       gargoylesoftware: off
-    root: info
+    root: error
   config: classpath:logback-spring.xml
   file:
     path: /judge/log/judgeserver
