--- a/hoj-springboot/api/pom.xml
+++ b/hoj-springboot/api/pom.xml
@@ -37,6 +37,10 @@
             <version>2.9.2</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>3.2.0</version>
