--- a/hoj-vue/package.json
+++ b/hoj-vue/package.json
@@ -29,6 +29,7 @@
     "vue-cropper": "^0.5.5",
     "vue-echarts": "^5.0.0-beta.0",
     "vue-i18n": "^8.24.4",
+    "vue-katex-auto-render": "^0.1.3",
     "vue-m-message": "^3.0.0",
     "vue-monoplasty-slide-verify": "^1.1.3",
     "vue-particles": "^1.0.9",
