open mybatis L2 cache

--- a/hoj-springboot/DataBackup/src/main/resources/application.yml
+++ b/hoj-springboot/DataBackup/src/main/resources/application.yml
@@ -6,7 +6,7 @@ mybatis-plus:
   mapper-locations: classpath*:top/hcode/hoj/mapper/xml/**Mapper.xml
   type-aliases-package: top.hcode.hoj.pojo.entity
   configuration:
-    cache-enabled: false
+    cache-enabled: true
   # 关闭打印 mybatis-plus 的 LOGO
   global-config:
     banner: false
