--- a/hoj-springboot/JudgeServer/src/main/resources/application.yml
+++ b/hoj-springboot/JudgeServer/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
   datasource:
     username: ${hoj.db.username}
     password: ${hoj.db.password}
-    url: jdbc:mysql://${hoj.db.public-host}:${hoj.db.port}/${hoj.db.name}?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&allowMultiQueries=true&rewriteBatchedStatements=true
+    url: jdbc:mysql://${hoj.db.public-host}:${hoj.db.public-port:3306}/${hoj.db.name:hoj}?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&allowMultiQueries=true&rewriteBatchedStatements=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
     initial-size: 10 # 初始化时建立物理连接的个数。初始化发生在显示调用init方法，或者第一次getConnection时
