--- a/hoj-vue/package.json
+++ b/hoj-vue/package.json
@@ -24,6 +24,7 @@
     "papaparse": "^5.3.0",
     "vue": "^2.6.11",
     "vue-avatar": "^2.3.3",
+    "vue-calendar-heatmap": "^0.8.4",
     "vue-clipboard2": "^0.3.1",
     "vue-codemirror-lite": "^1.0.4",
     "vue-cropper": "^0.5.5",
