--- a/hoj-springboot/DataBackup/src/main/resources/bootstrap.yml
+++ b/hoj-springboot/DataBackup/src/main/resources/bootstrap.yml
@@ -1,11 +1,8 @@
-hoj-backstage:
-  port: ${BACKEND_SERVER_PORT:6688} # 本服务器启动的端口号
-  nacos-url: ${NACOS_URL:172.20.0.4:8848} # nacos的地址
-server:
-  port: ${hoj-backstage.port}
-  servlet:
-    encoding:
-      force: true
+# nacos配置
+nacos-url: ${NACOS_URL:127.0.0.1:8848}
+nacos-username: ${NACOS_USERNAME:root}
+nacos-password: ${NACOS_PASSWORD:hoj123456}
+
 spring:
   profiles:
     active: prod
@@ -14,20 +11,19 @@ spring:
   cloud:
     nacos:
       discovery:
-        username: ${NACOS_USERNAME:nacos}
-        password: ${NACOS_PASSWORD:nacos}
-        server-addr: ${hoj-backstage.nacos-url} # Nacos 作为服务注册中心 nacos的地址
+        username: ${nacos-username}
+        password: ${nacos-password}
+        server-addr: ${nacos-url} # Nacos 作为服务注册中心 nacos的地址
       config:
-        username: ${NACOS_USERNAME:nacos}
-        password: ${NACOS_PASSWORD:nacos}
-        server-addr: ${hoj-backstage.nacos-url}  #Nacos 作为配置中心地址 nacos的地址
+        username: ${nacos-username}
+        password: ${nacos-password}
+        server-addr: ${nacos-url}  #Nacos 作为配置中心地址 nacos的地址
         file-extension: yml #指定yaml格式的配置
         group: DEFAULT_GROUP  # 指定分组
         type: yaml
         #namespace:命名空间ID  默认为public
         prefix: hoj
-      url: http://${hoj-backstage.nacos-url}
-
+      url: http://${nacos-url}
 
 # ${spring.application.name}-${spring.profile.active}.${spring.cloud.naces.config.file-extension}
 # ${spring.cloud.nacos.config.prefix}-${spring.profile.active}.${spring.cloud.naces.config.file-extension}
