--- a/hoj-springboot/JudgeServer/pom.xml
+++ b/hoj-springboot/JudgeServer/pom.xml
@@ -5,13 +5,14 @@
     <parent>
         <artifactId>hoj-springboot</artifactId>
         <groupId>top.hcode</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>4.3</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>JudgeServer</artifactId>
+    <artifactId>hoj-judgeServer</artifactId>
     <packaging>jar</packaging>
 
     <build>
+        <finalName>${project.artifactId}-${version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -46,8 +47,8 @@
     <dependencies>
         <dependency>
             <groupId>top.hcode</groupId>
-            <artifactId>api</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>hoj-api</artifactId>
+            <version>4.3</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
@@ -98,13 +99,11 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>5.7.2</version>
         </dependency>
 
         <dependency>
             <groupId>com.github.oshi</groupId>
             <artifactId>oshi-core</artifactId>
-            <version>5.6.1</version>
         </dependency>
 
         <!-- Jsoup-->
