change: shiro and nacos config

--- a/hoj-springboot/DataBackup/src/main/resources/application-dev.yml
+++ b/hoj-springboot/DataBackup/src/main/resources/application-dev.yml
@@ -114,7 +114,7 @@ logging:
       alibaba:
         nacos:
           client:
-            naming: debug
-    root: debug
+            naming: info
+    root: info
   file:
     path: ./hoj_backend
